sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:4: error: not found: value v
    v = getValeur(i)
    ^AlgInsertionSort:6: error: not found: value v
    while(!plusPetitQue(j,v)){
                          ^AlgInsertionSort:10: error: not found: value v
    setValeur(j,v)
                ^